# HeatWatch

./: .gitignore  README.md  algorithm_explanation.md  pyproject.toml
asset_profile/: 04a33820-46d5-11f1-b7a8-75be0d5c4df2.json
backend/: .gitignore  docker-compose.yml
converter/: 002a5f20-49d3-11f1-9234-b7886a2047b6.json  0cdc6270-47d2-11f1-b75f-3300bce53b8d.json  da901f10-4f8c-11f1-aa03-0f0d95b4aecc.json
customer/: 94f47050-487f-11f1-b7a8-75be0d5c4df2.json
dashboard/: 23a26990-46d9-11f1-b25a-9b1cf0871243.json  8de846c0-4a13-11f1-b11b-61363d9cb08c.json  b84268b0-4a13-11f1-86c8-25ff9853640b.json
device/: 21a0b4b0-4e01-11f1-991e-491f5f65ab20.json  63088c00-4a11-11f1-89de-3725b2d91471.json  793ee760-46d5-11f1-b7a8-75be0d5c4df2.json  a826bf30-47cf-11f1-9234-b7886a2047b6.json  c3132450-47cf-11f1-b25a-9b1cf0871243.json
device_profile/: 04a1d890-46d5-11f1-b7a8-75be0d5c4df2.json  d58034b0-4a0f-11f1-89de-3725b2d91471.json
edge/: ESP32_LilyGo.ino  ESP32_TTGo.ino  ESP_32_LilyGo.ino  heatwatch_new.ino  heatwatch_new_file.ino  readme.md
frontend/: .env.example  middleware.ts  next.config.ts  package-lock.json  package.json  test-connection.js
integration/: 0d0a5040-47d2-11f1-b75f-3300bce53b8d.json
notification_rule/: 04a69380-46d5-11f1-b7a8-75be0d5c4df2.json  04a756d0-46d5-11f1-b7a8-75be0d5c4df2.json  04a7cc00-46d5-11f1-b7a8-75be0d5c4df2.json  04a81a20-46d5-11f1-b7a8-75be0d5c4df2.json  04a88f50-46d5-11f1-b7a8-75be0d5c4df2.json  04a90480-46d5-11f1-b7a8-75be0d5c4df2.json  04a979b0-46d5-11f1-b7a8-75be0d5c4df2.json  04a9eee0-46d5-11f1-b7a8-75be0d5c4df2.json  (+1 more)
(+63 files in other folders)
