[project]
name = "heatwatch"
version = "0.1.0"
description = "IoT Heat Stress & Safety Wearable"
authors = [
    { name = "Canaan Guo", email = "24576325@student.uwa.edu.au" }
]
dependencies = [
    "paho-mqtt>=2.1.0",
    "python-dotenv>=1.0.1"
]
requires-python = ">=3.9"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "simulator"}]
